# web-softplc-net-config

./: CMakeLists.txt  README.md  http-busybox.service  httpd.conf  postinst  prerm  web-softplc-net-config.conf  web-softplc-net-config.service
web-root/: index.html
web-root/cgi-bin/: net-config-form-handler.sh  net-config-restart.sh
web-root/softplc-net-config/: index.html  net-config.js  saved.html  validations.js
web-root/softplc-net-config/cgi-bin/: cgi-funcs.sh  net-config-form-handler.sh  net-config-read-current-settings.sh  net-config-restart.sh
web-root/softplc-net-config/config/: LAST-NETWORKS.LST  NETWORKS.LST
